infrastructure, application and domain implemented for getting all brand paginated